--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -19,7 +19,7 @@ While aggregate abundance-based LRPs are consistent with what is typically used 
 
 WSP assessments are typically intensive expert-driven processes and have only been completed for a small subset of CUs to date.  We demonstrate the application of the Pacific Salmon Status Scanner Tool (hereafter referred to as the 'Salmon Scanner') that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP (Pestal *et al.*, in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.]). Applying this tool allows us to generate up-to-date estimates of CU status for all of our case study applications, and is recommended as a tool for defining LRPs in our companion working paper (Holt *et al.*, in review) <!--CH: omit?: ^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]-->. When developing aggregate abundance-based LRPs, we also consider cases in which CU status is based on spawning abundance relative to a single lower benchmark that has been identified as important by local experts. While the Salmon Scanner better captures the multiple dimensions that are used to inform biological status under the WSP (e.g., abundances, short-term and long-term trends), we compare it to status derived from a single metric relative to a lower benchmark to demonstrate how in many cases the Salmon Scanner reduces to this metric. Exceptions are described in the application to case studies. A variety of methods are available for estimating lower benchmarks on abundances depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020], as described in Holt *et al.* (in review). 
 
-When developing aggregate abundance-based LRP options for salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above red status. We use two methods to identify these levels: (i) Logistic regression-based LRPs and (ii) Projection-based LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt *et al.* (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt *et al.* (in review). <!--CH: I wonder if we can remove this next sentence as I think the topic is better captured in the Guidelines paper?--> While aggregate-abundance based LRPs can be used to inform harvest control rules for fisheries management, more complex harvest control rules that include for example, time-area closures to limit CU-specific harvests may better achieve the underlying objective of maintaining CU statuses above red (as described in Holt *et al.* (in review)).
+When developing aggregate abundance-based LRP options for salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above red status. We use two methods to identify these levels: (i) Logistic regression-based LRPs and (ii) Projection-based LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt *et al.* (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt *et al.* (in review). <!--CH: I wonder if we can remove this next sentence as I think the topic is better captured in the Guidelines paper?--> While aggregate abundance-based LRPs can be used to inform harvest control rules for fisheries management, more complex harvest control rules that include for example, time-area closures to limit CU-specific harvests may better achieve the underlying objective of maintaining CU statuses above red (as described in Holt *et al.* (in review)).
 
 We also maintain consistency with the WSP by only including populations without significant enhancement when evaluating CU and SMU status. Populations where production is dominated by hatchery-origin fish, defined as systems with Proportionate Natural Influence (PNI) estimates <0.5 [@withlerGeneticallyBasedTargets2018] are excluded from analyses. In addition, for systems where time-series of the proportion of hatchery marked fish on the spawning grounds are available, these proportions are used to inform assessments in two ways: first to develop time-series of natural-origin recruitment for benchmark estimation based on stock-recruitment relationships and second to develop time series of natural-origin spawners for status assessment against benchmarks.  
 
@@ -35,11 +35,12 @@ When assessing CU status relative to a single abundance-based lower benchmark in
 
 ### Pacific Salmon Status Scanner {#rapidToolMethods}
 
-One of the methods we consider to estimate CU status for proportion-based LRPs relies on a method of rapidly assessing CU status using multidimensional algorithms.  We implement this approach using the Salmon Scanner that has recently been developed by DFO's State of the Salmon Program (Pestal *et al.*, in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.]). The scanning tool is intended to support implementation of Canada's WSP by approximating the outcomes of full WSP Integrated Status Assessments on an more regular basis than the time-intensive WSP assessment approach allows. The Salmon Scanner was developed using Classification and Regression Tree (CART) analyses to create algorithms that approximate the status of the integrated assessments.  Data inputs and outcomes from the WSP assessment processes were used in CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020], and was further ground-truthed with data for Fraser River Chum and Pink Salmon (Pestal *et al.* in prep ).  <!--CH comment: may need to change the pestal citation to S. Grant, pers comm.  I'm not sure how much the Pink and Chum work will be captured in the report?-->. Briefly, the scanning tool uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). An expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers comm). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm them based on expert opinion. 
+One of the methods we consider to estimate CU status for proportion-based LRPs relies on a method of rapidly assessing CU status using multidimensional algorithms.  We implement this approach using the Salmon Scanner that has recently been developed by DFO's State of the Salmon Program (Pestal *et al.*, in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.]). The Salmon  Scanner is intended to support implementation of Canada's WSP by approximating the outcomes of full WSP Integrated Status Assessments on a more regular basis than the time-intensive WSP assessment approach allows. The Salmon Scanner was developed using Classification and Regression Tree (CART) analyses to create algorithms that approximate the status of the integrated assessments.  Data inputs and outcomes from previous WSP assessment processes were used in CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020]. The algorith was further ground-truthed with data and local expertise on assessed status for Fraser River Chum and Pink Salmon (Pestal *et al.* in prep ).  <!--CH comment: may need to change the pestal citation to S. Grant, pers comm.  I'm not sure how much the Pink and Chum work will be captured in the report?-->. Briefly, the scanning tool uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). An expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers. comm.). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm them based on expert opinion. <!--CH suggestion: "In practice, results from Salmon Scanner will be validated against local expertise when implemented annually (S. Grant, pers. comm.)"-->
 
 <!--
 CH comment on last sentence; "with the exception of Interior Fraser River Coho which has been vetted through the State of the Salmon program and local experts (Pestal *et al.* in prep)"
 KH comment: although, given that we are using different Sgens, this may not apply. Will wait to see SOS results using our updated Sgens to see if mentioning this is relevant.
+CH (14 Dec): let's leave this out (i.e., ignore my original comment)
 --> 
 
 \newpage
@@ -61,19 +62,19 @@ TO DO: Luke, can you please update this figure with updated SOTS decision tree.
 -->
 
 
-The Salmon Scanner uses the most recent generational mean spawner abundance (calculated as a geometric mean) as a basis for comparison at each node of the decision tree, including when comparing against absolute abundance thresholds (e.g., 1500 spawners), abundance-based lower benchmarks (e.g., S\textsubscript{gen} or percentile), and abundance-based upper benchmarks (e.g., 0.8S\textsubscript{MSY} or percentile). Spawner abundances are also smoothed using generational averages prior to calculating trends in spawner abundance over time (Pestal *et al.*, in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.])  
+The Salmon Scanner uses the most recent generational mean spawner abundance (calculated as a geometric mean) as a basis for comparison at each node of the decision tree, including when comparing against absolute abundance thresholds (e.g., 1500 spawners), abundance-based lower benchmarks (e.g., S\textsubscript{gen} or percentile), and abundance-based upper benchmarks (e.g., 0.8S\textsubscript{MSY} or percentile). Spawner abundances are also smoothed using generational averages prior to calculating trends in spawner abundance over time (Pestal *et al.*, in prep.).<!--CH remove after fist instance?: ^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.])  -->
 
 
 ## AGGREGATE ABUNDANCE-BASED LRPS{#aggAbundMethods}
 
-Aggregate abundance-based LRPs are based on the SMU-level abundance at which there is a sufficiently high probability that 100% of CUs (the same % as used for proportion-based LRPs) will be above a single selected benchmark. When developing aggregate abundance-based LRPs, status relative to a single benchmark is used a proxy for above the red zone. The Salmon Scanner tool was considered in preliminary analyses as way to identify 'red' status for aggregate-abundance based LRPs, but we dismissed it for computational reasons that are described below. The above definition of aggregate abundance-based LRPs requires a decision to be made about what represents a 'sufficiently high probability' that 100% of CUs will be above their benchmarks. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in (Holt *et al.* in review).
+Aggregate abundance-based LRPs are based on the SMU-level abundance at which there is a sufficiently high <!--CH: "desired" instead of sufficiently high? 50% isn't all that high--> probability that 100% of CUs (the same % as used for proportion-based LRPs) will be above a single selected benchmark. When developing aggregate abundance-based LRPs, status relative to a single benchmark is used a proxy for status above the red zone. The Salmon Scanner tool was considered in preliminary analyses as a way to identify red status for aggregate abundance-based LRPs, but we dismissed it for computational reasons that are described below. The above definition of aggregate abundance-based LRPs requires a decision to be made about what represents a 'sufficiently high probability'<!--CH: replaced with "desired", though I would remove quotes--> that 100% of CUs will be above their benchmarks. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in (Holt *et al.* in review).
  
-We consider two types of aggregate abundance-based LRPs in our case studies: Logistic regression-based LRPs and Projection-based LRPs. Logistic regression LRPs are estimated using historical data, representing conditions that have been previously experienced by a SMU and thus implicitly assume the past is a reasonable approximation of the future. In comparison, projection-based LRPs use historical data as a basis for quantifying population dynamics, but are based on projections of future states, and thus, allow uncertainty in future processes to be accounted for through alternative scenarios. Thus projection-based LRPs overcomes one key short-coming of the logistic-regression based LRP that historical conditions might not represent current (or future) conditions, by allowing the user to specify model structure and parameter estimates and their uncertainties that reflect the best-available science on current (or future) dynamics.
+We consider two types of aggregate abundance-based LRPs in our case studies: logistic regression-based LRPs and projection-based LRPs. Logistic regression LRPs are estimated using historical data, representing conditions that have been previously experienced by a SMU and thus implicitly assume the past is a reasonable approximation of the future. In comparison, projection-based LRPs use historical data as a basis for quantifying population dynamics, but are based on projections of future states, and thus, allow uncertainty in future processes to be accounted for through alternative scenarios. Thus projection-based LRPs overcome one key short-coming of the logistic regression-based LRP that historical conditions might not represent current (or future) conditions, by allowing the user to specify model structure and parameter estimates and their uncertainties that reflect the best-available science on current (or future) dynamics.
 
-Within both the logistic regression- and projection-based LRP estimation routines, we characterize annual CU status using a single metric, spawner abundances relative to benchmarks instead of using the multidimensional approach used by the Salmon Scanner. While in theory, estimates of CU status used in the aggregate-abundance based methods could be derived from the Salmon Scanner, we found little evidence of a statistical relationship between between Salmon Scanner status estimates for CUs and aggregate spawner abundance for the one case study we considered this approach for: Interior Fraser Coho. In addition, projection-based LRPs are derived from an equilibrium model that does not incorporate temporal dynamics required for assessment of trends in the Salmon Scanner Tool. As a result, we rely on status estimated from a single lower benchmark metric (e.g., S\textsubscript{gen}) rather than the Salmon Scanner to develop aggregate-abundance based LRPs in our case studies. We provide further discussion of this result within the Interior Fraser Coho case study section of this paper. 
+Within both the logistic regression- and projection-based LRP estimation routines, we characterize annual CU status using a single metric, spawner abundances relative to benchmarks instead of using the multidimensional approach used by the Salmon Scanner. While in theory, estimates of CU status used in the aggregate abundance-based methods could be derived from the Salmon Scanner, we found little evidence of a statistical relationship between between Salmon Scanner statuses for CUs and aggregate spawner abundances for the one case study where we considered this approach, Interior Fraser River Coho. In addition, projection-based LRPs are derived from an equilibrium model that does not incorporate temporal dynamics required for assessment of trends in the Salmon Scanner Tool. As a result, we rely on status estimated from a single lower benchmark metric (e.g., S\textsubscript{gen}) rather than the Salmon Scanner to develop aggregate abundance-based LRPs in our case studies. We provide further discussion of this result within the Interior Fraser River Coho case study section of this paper. 
 
 
-In addition, we characterize annual CU status using raw annual spawner abundances instead of generational averages when estimating aggregate abundance-based LRPs. This approach is based on preliminary analyses of the logistic regression-based method that showed using raw spawner abundances improved the spread in the data used to establish a relationship between CU status and aggregate spawning abundance. Furthermore, using generational means in the logistic regression-based approach led to considerable autocorrelation in the aggregate abundance time series, violating assumptions of the logistic regression. We therefore used raw annual spawner abundances within the estimation routines for aggregate-abundance based LRPs. However, we used generational averages of aggregate spawner abundances when assessing SMU-level status relative to the aggregate abundance-based LRPs to reduce noise in annual decisions about whether an LRP had been breached related to variability in cohorts within a generation.  The decision to use generational averages of aggregate spawner abundances when determining whether an LRP is breached is consistent with the approach used for proportion-based LRPs. In both cases, the underlying metric being used to determine SMU status (either aggregate abundance or CU-level status of component CUs for the proportion-based approach) is based on generational-averaged values in order to reduce annual fluctuations in status related to independent cohorts within a generation. 
+In addition, we characterize annual CU status using raw annual spawner abundances instead of generational averages when estimating aggregate abundance-based LRPs. This approach is based on preliminary analyses of the logistic regression-based method that showed using raw spawner abundances improved the spread in the data used to establish a relationship between CU status and aggregate spawning abundance. Furthermore, using generational means in the logistic regression-based approach led to considerable autocorrelation in the aggregate abundance time series, violating assumptions of the logistic regression. We therefore used raw annual spawner abundances within the estimation routines for aggregate abundance-based LRPs. However, we used generational averages of aggregate spawner abundances when assessing SMU-level status relative to the aggregate abundance-based LRPs to reduce noise in annual decisions about whether an LRP had been breached related to variability in cohorts within a generation.  The decision to use generational averages of aggregate spawner abundances when determining whether an LRP is breached is consistent with the approach used for proportion-based LRPs. In both cases, the underlying metric being used to determine SMU status (either aggregate abundance or CU-level status of component CUs for the proportion-based approach) is based on generational-averaged values in order to reduce annual fluctuations in status related to independent cohorts within a generation. 
 
 
 ### Logistic regression-based LRPs{#logisticMethods}
@@ -97,7 +98,7 @@ where, $p$ is probability, $B_0$ and $B_1$ are estimated logistic regression par
   (\#eq:logisticLRP)
 \end{equation}
 
-Annual spawner abundances at both the CU and SMU level for this analysis are on the raw scale (i.e., no generational averaging applied). An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit). We show the estimation of LRPs based on this fit for four possible probability thresholds: $p^*$ = 0.5, 0.66, 0.90, and 0.99. For each $p^*$ level, LRP estimates represent the aggregate abundance that is associated with that probability of all CUs having status greater than their LBM. Logistic regression models were fit using TMB (citation), with resulting LRP estimates from equation \@ref(eq:logisticLRP) calculated within the code. Uncertainty in LRP estimates were quantified based on a 95% confidence interval on the maximum likelihood estimate, MLE.  
+Annual spawner abundances at both the CU and SMU level for this analysis are on the raw scale (i.e., no generational averaging applied). An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit). We show the estimation of LRPs based on this fit for four possible probability thresholds: $p^*$ = 0.5, 0.66, 0.90, and 0.99. For each $p^*$ level, LRP estimates represent the aggregate abundance that is associated with that probability of all CUs having status greater than their LBM. <!--CH: TMB mentioned below, so suggest rewording next sentence and combining with last sentence: "LRPs were estimated from parameters of the logistic regression model (Eqn. \@ref(eq:logisticLRP)) and uncertainties in LRP estimates...."--> Logistic regression models were fit using TMB [@kristensenTMBAutomaticDifferentiation2016], with resulting LRP estimates from equation \@ref(eq:logisticLRP) calculated within the code. Uncertainty in LRP estimates were quantified based on a 95% confidence interval on the maximum likelihood estimate, MLE.  
 
 ```{r example-logisticFit, fig.cap="Logistic regression fit to annual Bernoulli data to predict the probability of all CUs being above their lower benchmark (LBM) as a function of aggregate SMU abundance. Each black dot represent a year in the observed time series as a Bernoulli indicator showing whether the requirement of all CUs above their LBM was met (success = 1) or not (failure = 0) as a function of aggregate spawning abundance to the SMU. The black solid line is the maximum likelihood model fit to indicator data, and the grey shaded region shows the 95\\% confidence interval around the fit model. Coloured lines illustrate aggregate abundance LRPs for 4 different probability thresholds: p* = 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange) probability that all CUs > LBM. Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/methods-Example-LogisticLRP.png")
@@ -105,12 +106,12 @@ knitr::include_graphics("figure/methods-Example-LogisticLRP.png")
 
 We initially considered an alternative approach to logistic regression in which the LRP represents the aggregate abundance that has historically been associated with a pre-specified proportion of CUs being above their lower benchmark. Using this approach, CU-level status was quantified as the number or CUs with status > LBM for each year of observed data.  A logistic regression was then fit to predict the proportion of CUs with status > LBM as a function of aggregate spawner abundance to the SMU (i.e., abundance from nCUs combined). We do not present this method for our case studies, however, due to inherent limitations when the required proportion of CUs above their lower benchmarks is 100%. Equation \@ref(eq:logisticLRP) cannot be solved directly for a threshold proportion of $p^*$ = 100%, and LRP estimates were highly sensitive to the choice of $p^*$ value used as a proxy. Using $p^*$ = 99% vs. $p^*$ = 99.9% vs. $p^*$ = 99.99% gave very different LRP estimates. 
 
-The logistic regression model was implemented in TMB [@kristensenTMBAutomaticDifferentiation2016]. The model was statistically integrated, i.e., both the CU-specific lower benchmarks (S\textsubscript{gen}) and the SMU logistic regression parameters were estimated within the same statistical model. The integrated approach allowed the propagation of uncertainty in parameter estimates from the CU level to the SMU level resulting in more comprehensive uncertainty estimates for the aggregate abundance LRPs.   
+The logistic regression model was implemented in TMB [@kristensenTMBAutomaticDifferentiation2016]. The model was statistically integrated, i.e., both the CU-specific lower benchmarks (S\textsubscript{gen}) and the SMU logistic regression parameters were estimated within the same statistical model. The integrated approach allowed for the propagation of uncertainty in parameter estimates from the CU level to the SMU level, resulting in more comprehensive<!--CH: 'comprehensive' might be a bit unclear. Perhaps reword to "resulting in uncertainty intervals that better captured underlying uncertainty in benchmarks"?--> uncertainty estimates for the LRPs.   
 
 
 ##### Logistic Regression Model Diagnostics
 
-There are several assumptions associated with logistic regression, three of which are relevant for our application to LRPs are listed below. Model diagnostics were applied to evaluate the extent to which those assumptions were met, as well as statistical significance of model coefficients, goodness-of-fit, and classification accuracy of LRPs developed from the logistic regression. The three assumptions are as follows:
+There are several assumptions associated with logistic regression, three of which are relevant for our application to LRPs and are listed below. Model diagnostics were applied to evaluate the extent to which those assumptions were met, as well as statistical significance of model coefficients, goodness-of-fit, and classification accuracy of LRPs developed from the logistic regression. The three assumptions are as follows:
 
 1. The relationship between aggregate abundance and log-odds (the logarithm of the odds of all CUs being above their lower benchmark) is linear.
 
@@ -190,9 +191,9 @@ In addition, the pseudo-$R^2$ was calculated to indicate the ratio of the model 
    (\#eq:psuedoR2)
 \end{equation}
 
-where $d_0$ are the deviance residuals for the null model. The psuedo-$R^2$ is a measure of the strength of the relationship between aggregate abundances and probability of all CUs being above their lower benchmarks, but unlike $R^2$ values for linear models, it does not represent the percentage of variance explained by the model and is not related to the correlation coefficient.
+where $d_0$ are the deviance residuals for the null model. The pseudo-$R^2$ is a measure of the strength of the relationship between aggregate abundances and probability of all CUs being above their lower benchmarks. Unlike $R^2$ values for linear models, the pseudo-$R^2$ does not represent the percentage of variance explained by the model and is not related to the correlation coefficient.
 
-In addition, the length of available time-series will impact power to detect significant model coefficients, and coefficient estimates may be biased when time-series are short.  @peduzziSimulationStudyNumber1996 recommend a minimum of 10 data points for the least frequent outcome to avoid biases in model coefficients, based on simulation study of epidemiological data. For example, if the frequency of outcomes were 0.5 and 0.5 (for 0 and 1, respectively), then a sample size of at least 10/0.5 = 20 would be sufficient, and this minimum sample size would be higher if the data were skewed, e.g., if frequency of outcomes were 0.7 and 0.3, the minimum sample size would be 10/0.3 = 33. A similar evaluation of sample sizes to minimize biases logistic-regression based LRPs for fisheries applications is warranted. Although it is possible to estimate LRPs with lower sample sizes, the risks of biases in model parameters (and LRPs) increases.
+In addition, the length of available time-series will impact the power to detect significant model coefficients, and coefficient estimates may be biased when time-series are short.  @peduzziSimulationStudyNumber1996 recommend a minimum of 10 data points for the least frequent outcome to avoid biases in model coefficients, based on simulation study of epidemiological data. For example, if the frequency of outcomes were 0.5 and 0.5 (for 0 and 1, respectively), then a sample size of at least 10/0.5 = 20 would be sufficient, and this minimum sample size would be higher if the data were skewed, e.g., if frequency of outcomes were 0.7 and 0.3, the minimum sample size would be 10/0.3 = 33. A similar evaluation of sample sizes to minimize biases logistic regression-based LRPs for fisheries applications is warranted. Although it is possible to estimate LRPs with lower sample sizes, the risks of biases in model parameters (and LRPs) increases.
 
 **Classification accuracy of LRPs**
 
@@ -201,11 +202,11 @@ Classification accuracy was evaluated based on the ratio of successful classific
 
 ### PROJECTION-BASED LRPS{#projectedMethods}
 
-The projection-based LRP approach uses population parameters of individual CUs within an SMU to project abundances forward under current exploitation rates.  Natural variability in  recruitment and ages-at-maturity are incorporated into forward projections, as is implementation uncertainty in exploitation rates. Projections are run for 30 years after an initialization period to remove the impacts of initial conditions and identify aggregate abundances characterized by an equilibrium state represented by stable distribution of projected abundances. <!--CH 4 Dec: I revised the first few sentences of this pgh to align with Guidelines paper; feel free to revise, Can we describe various ERS as a sensitivity analyses subsequently?--> Projection-based LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g. S\textsubscript{gen}).  This projection-based LRP approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect a lack of biological and/or fisheries information. As with logistic regression-based LRPs, we relied on status estimated from a single metric rather than the Salmon Scanner tool to develop LRPs using projections.
+The projection-based LRP approach uses population parameters of individual CUs within an SMU to project abundances forward under current exploitation rates.  Natural variability in recruitment and ages-at-maturity are incorporated into forward projections, as is implementation uncertainty in exploitation rates. Projections are run for 30 years after an initialization period to remove the impacts of initial conditions and identify aggregate abundances characterized by an equilibrium state represented by stable distribution of projected abundances. <!--CH 4 Dec: I revised the first few sentences of this pgh to align with Guidelines paper; feel free to revise, Can we describe various ERS as a sensitivity analyses subsequently?--> Projection-based LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g. S\textsubscript{gen}).  This projection-based LRP approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect a lack of biological and/or fisheries information. As with logistic regression-based LRPs, we relied on status estimated from a single metric rather than the Salmon Scanner tool to develop LRPs using projections.
 
 We used the samSim closed loop simulation modelling tool to conduct stochastic projections for our case study applications. samSim is an R package that was developed to quantify recovery potential for Pacific salmon populations [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020]. We created a modified version of samSim to support LRP estimation. The LRP version of samSim is described in detail in Appendix \@ref(app:samsim-appendix), and model code is available on GitHub (see Appendix \@ref(app:github-appendix) for link to code).  
 
-Detailed descriptions of the parameterization of samSim for our two case study applications of abundance-based projected LRPs (Interior Fraser Coho and WCVI Chinook) are presented in Chapters 3 and 4, respectively. In both cases, we incorporated uncertainty into projected CU dynamics through the specification of empirically-derived probability distributions for key biological and management parameters, including stock-recruitment parameters, proportion of recruits at age, and exploitation rates (ER). Larger structural uncertainties in model formulation were represented through the use of sensitivity analyses and/or alternative operating models (OMs). Observation error was not included in projections because derivation of LRPs was based on projected 'true' abundance levels rather than observed abundance. 
+Detailed descriptions of the parameterization of samSim for our two case study applications of abundance-based projected LRPs (Interior Fraser Coho and WCVI Chinook) are presented in Sections \@ref(IFCChapter) and \@ref(WCVIchinookChapter), respectively. In both cases, we incorporated uncertainty into projected CU dynamics through the specification of empirically-derived probability distributions for key biological and management parameters, including stock-recruitment parameters, proportion of recruits at age, and exploitation rates (ER). Larger structural uncertainties in model formulation were represented through the use of sensitivity analyses and/or alternative operating models (OMs). Observation error was not included in projections because derivation of LRPs was based on projected 'true' abundance levels rather than observed abundance. 
 
 The following steps were taken to calculate projection-based LRPs:
 
@@ -242,7 +243,7 @@ For example, if 125 of the 500 realizations that fell within the $SAgg_{bin}$ of
    4. Identify the LRP as the mid-point of the aggregate abundance bin, $AggS_{bin}$, that is closest to the desired probability threshold that all CUs are above their LBMs.
 
 <!--CH: i changed 'required probabiltiy' to 'desired probabilty', okay?-->
-An example of the derivation of an LRP from the projected curve of aggregate abundance bins versus the probability of all CUs being > their lower benchmark is shown in Figure \@ref(fig:example-projectedCurve) for the four probability levels used in our case studies (p* = 0.5, 0.66, 0.90, and 0.99). Uncertainty estimates for LRPs are not available based on this method, but the approach does integrate all uncertainties in underlying parameters to identify LRPs with specified probabilities of all CUs being above LBM. In addition, LRP estimates could be presented as a range based on the $SAgg_{bin}$ bin size.
+An example of the derivation of an LRP from the projected curve of aggregate abundance bins versus the probability of all CUs being > their lower benchmark is shown in Figure \@ref(fig:example-projectedCurve) for the four probability levels used in our case studies (p* = 0.5, 0.66, 0.90, and 0.99). Uncertainty intervals for LRPs are not generated in this method <!--CH: changed 'but' to 'becuase'-->because <!--CH suggestion: this method does not include statistical estimation and"--> projections integrate uncertainties in all underlying parameters to identify LRPs with specified probabilities of all CUs being above LBM. In addition,<!--CH: maybe replace "In additoin" with "However"?--> LRP estimates could be presented as a range based on the $SAgg_{bin}$ bin size.
 
 ```{r example-projectedCurve, fig.cap="Example of projected probability curve derived from projections over 30 years and 10,000 MC trials.  The curve shows the projected probability of all CUs being above their lower benchmark (LBM) as a function of aggregate SMU abundance, where aggregate spawning abundance is a bin of 200 fish (e.g., 0-200, 201-400, etc.). Each dot in the curve therefore represents a single 200-fish bin. Coloured lines demonstrate how aggregate abundance LRPs are calculated for 4 different probability thresholds: p* = 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange) for the probability that all CUs are greater than their LBM. Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/methods-Example-ProjectedLRP.png")
@@ -252,4 +253,5 @@ knitr::include_graphics("figure/methods-Example-ProjectedLRP.png")
 <!--
   Brendan's comment: "In PDF this is in the IF coho section (referring to figure above)"
   CW: there are ways of forcing figures to remain in their sections, however I don't think we should tamper with that until our writing is done. 
+  CH: I agree. I think Sean's suggestion has always been don't tamper with them.
 -->
